# adk-cowork

./: .editorconfig  .env.sample  .gitignore  .pre-commit-config.yaml  ARCHITECTURE.md  CHANGELOG.md  CONSTITUTION.md  INDEX.md  LICENSE  PLAN.md  README.md  SPEC.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
docs/: MCP.md  MEMORY.md  WRITING_A_SKILL.md
docs/compare-claude-code/: 01-agent-loop.md  02-system-prompt.md  03-hooks-callbacks.md  04-policies.md  05-tools.md  06-skills.md  07-subagents.md  08-memory-context.md  09-streaming-ui.md  README.md
scripts/: bundle_python.py  dev.sh  installer_qa.md
tests/: test_agent_gates.py  test_audit.py  test_callbacks_and_prompt.py  test_custom_agents.py  test_email.py  test_execenv.py  test_fs_tools.py  test_http_and_search.py  test_local_session.py  test_logging_setup.py  test_mcp.py  test_memory.py  test_multi_user.py  test_notifications.py  test_openapi.py  test_policy.py  test_preview.py  test_python_exec.py  test_routing.py  test_runtime_reload.py  test_search.py  test_server_split.py  test_settings.py  test_shell_deny.py  test_shell_gate.py  test_shell_run.py  test_skill_install_from_source.py  test_skills.py  test_smoke.py  test_storage.py  test_tool_registry.py  test_transport.py  test_w3_agents.py  test_workspace_model.py  test_workspace_settings.py
