[project]
name = "cowork-workspace"
version = "0.1.0"
description = "Cowork workspace root — office-work agent on Google ADK Python"
requires-python = ">=3.12"
dependencies = [
    "cowork-core",
    "cowork-server",
    "cowork-cli",
    "python-dotenv>=1.2.2",
]

[dependency-groups]
dev = [
    "ruff>=0.6",
    "mypy>=1.11",
    "pytest>=8",
    "pytest-asyncio>=0.24",
    "httpx>=0.27",
    "pre-commit>=3.8",
]

[tool.uv]
package = false

[tool.uv.workspace]
members = ["packages/*"]

[tool.uv.sources]
cowork-core = { workspace = true }
cowork-server = { workspace = true }
cowork-cli = { workspace = true }

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP", "N", "SIM", "RUF"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["B011"]

[tool.mypy]
python_version = "3.12"
ignore_missing_imports = true
warn_unused_ignores = true
disallow_untyped_defs = true
no_implicit_optional = true
check_untyped_defs = true
explicit_package_bases = true
mypy_path = "packages/cowork-core/src:packages/cowork-server/src:packages/cowork-cli/src"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
